k8s_deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-service
spec:
  selector:
    matchLabels:
      app: devops-service
  template:
    metadata:
      labels:
        app: devops-service
    spec:
      containers:
        - name: devops-service
          image: devops-service
          ports:
            - containerPort: 8000
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
