k8s_deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: site.com # change this
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: devops-service
